[metadata]
name = mplcheck
summary = Murano package checker
license = Apache License, Version 2.0
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[files]
packages =
    mplcheck
    mplcheck_license

[entry_points]
console_scripts =
    mplcheck = mplcheck.cmd:main
mplcheck.extensions =
    E451 = mplcheck_license:ApacheLicenseCheck