[metadata]
name = mpl-checker
summary = Murano package validation tool
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    mplcheck

[entry_points]
console_scripts =
    mpl-check = mplcheck.cmd.run:run

[global]
setup-hooks =
    pbr.hooks.setup_hook
